<PreferenceScreen xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="resume_startup"
        android:summary="@string/pref_description_resume_startup"
        android:title="@string/pref_title_resume_startup" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_list_brightness_entries"
        android:entryValues="@array/pref_list_brightness_values"
        android:key="list_brightness"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_list_brightness"
        android:summary="%s"/>

    <ListPreference
        android:defaultValue="-1"
        android:entries="@array/pref_list_delay_entries"
        android:entryValues="@array/pref_list_delay_values"
        android:key="list_delay"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_list_delay"
        android:summary="%s"/>

</PreferenceScreen>
